@@ -18,6 +18,7 @@
 14. Custom CSS scrollbars for WebKit browsers - blend in better with dark
     style.
 15. Store active tab in local storage, and restore upon restart.
+16. Only add "library_id" onto local library commands.
 
 0.0.7
 -----
